--- a/nowteprivacypolicy.html
+++ b/nowteprivacypolicy.html
@@ -1,3 +1,4 @@
+<div id="textwrapper" width:70%>
 <h2 id="privacy-policy-of-nowte">Privacy Policy of Nowte</h2>
 <p>Artsiom Bolatau built the Nowte application as an Ad Supported app. This SERVICE is provided by Artsiom Bolatau is intended for use as is.</p>
 <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
@@ -45,3 +46,4 @@ To determine whether any of the third-party services it uses honor the “Do Not
 <p>I may update Privacy Policy. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
 <p><strong>Contact Us</strong></p>
 <p>If you have any questions or suggestions about this Privacy Policy, contact me at nowteapplication[at]gmail.com</p>
+</div>
