--- a/nowteprivacypolicy.html
+++ b/nowteprivacypolicy.html
@@ -1,10 +1,12 @@
 <style>
     #textwrapper {
         width: 70%;
-	align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 </style>
-<div id="textwrapper">
+<div class="textwrapper">
 <h2 id="privacy-policy-of-nowte">Privacy Policy of Nowte</h2>
 <p>Artsiom Bolatau built the Nowte application as an Ad Supported app. This SERVICE is provided by Artsiom Bolatau is intended for use as is.</p>
 <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
