--- a/nowteprivacypolicy.html
+++ b/nowteprivacypolicy.html
@@ -1,8 +1,8 @@
 <style>
     .textwrapper {
         width: 70%;
-        display: flex;
-        align-items: center;
+        margin: 0 auto;
+        padding: 10px;
         justify-content: center;
     }
 </style>
