Add email link and shielding

--- a/nowteprivacypolicy.html
+++ b/nowteprivacypolicy.html
@@ -5,6 +5,13 @@
         padding: 10px;
         justify-content: center;
     }
+    email:before {
+        content: "nowteapplication";
+    }
+
+    email:after {
+        content: "@gmail.com";
+    }
 </style>
 <div class="textwrapper">
 <h2 id="privacy-policy-of-nowte">Privacy Policy of Nowte</h2>
@@ -53,5 +60,5 @@ To determine whether any of the third-party services it uses honor the “Do Not
 <p><strong>Changes to This Privacy Policy</strong></p>
 <p>I may update Privacy Policy. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
 <p><strong>Contact Us</strong></p>
-<p>If you have any questions or suggestions about this Privacy Policy, contact me at nowteapplication[at]gmail.com</p>
+<p>If you have any questions or suggestions about this Privacy Policy, contact me at <div id="email"></div></p>
 </div>
