Add email link and shielding fix

--- a/nowteprivacypolicy.html
+++ b/nowteprivacypolicy.html
@@ -5,11 +5,11 @@
         padding: 10px;
         justify-content: center;
     }
-    email:before {
+    #email:before {
         content: "nowteapplication";
     }
 
-    email:after {
+    #email:after {
         content: "@gmail.com";
     }
 </style>
