Add direct links to privacy policy

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>This is stub for published apps</h1>
+<h2>Nowte app privacy policy:</h2>
+<a href="https://bolatau.github.io/nowte_privacy_policy">https://bolatau.github.io/nowte_privacy_policy</a>
+<h2>GitHub:</h2>
 <a href="https://github.com/Bolatau">https://github.com/Bolatau</a>
